src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int32__bit_not_int32.snap
---
source: src/expr/src/scalar/func/impls/int32.rs
expression: "#[sqlfunc(sqlname = \"~\", preserves_uniqueness = true, inverse = to_unary!(BitNotInt32))]\nfn bit_not_int32(a: i32) -> i32 {\n    !a\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct BitNotInt32;
impl crate::func::EagerUnaryFunc for BitNotInt32 {
    type Input<'a> = i32;
    type Output<'a> = i32;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        bit_not_int32(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(BitNotInt32)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for BitNotInt32 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("~")
    }
}
fn bit_not_int32(a: i32) -> i32 {
    !a
}
